# my-server-boilerplate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.sample  logging_config.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1fc99d6ec49b_create_authentication_tables.py  c242ae284851_create_authentication_tables.py
app/: main.py  settings.py
app/api/: error.py  response.py
app/api/dependencies/: auth.py  session.py
app/api/routes/: __init__.py  health.py  user.py
app/controllers/: authentication.py  permission.py  user.py
app/database/: __init__.py  _base_model.py  _session.py  event_credential.py  permission.py  role.py  user.py  user_role.py
app/utils/: __init__.py  get_logger.py  helper.py  string.py
docker/: Dockerfile.develop
docs/: 001-相关插件介绍.md  001-项目框架介绍.md
rfcs/: 002-安装教程.md
scripts/: setup_project.sh
server_api/: dependencies.py  main.py  prepare_data.py  response.py
server_api/middleware/: auth.py
server_api/routes/: health.py  user.py
server_core/: utils.py
server_core/authentication/: __init__.py  controller.py  error.py  permission.py  schema.py
server_core/database/: __init__.py  _base_model.py  _session.py  event_credential.py  permission.py  role.py  user.py  user_role.py
tests/: conftest.py
tests/api/: test_health.py  test_user.py
