[project]
name = "my-server-boilerplate"
version = "0.0.0"
description = "Add your description here"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "alembic>=1.13.3",
    "sqlalchemy>=2.0.35",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "pydantic-settings>=2.5.2",
    "fastapi-login>=1.10.2",
    "python-jose[python-jose]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pre-commit>=3.8.0",
    "greenlet>=3.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_server_boilerplate"]
